--- a/src/Pages/Planets/style.css
+++ b/src/Pages/Planets/style.css
@@ -6,7 +6,7 @@
 
 .pagination-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   margin-bottom: 20px;
 }
 
